# phy3904_afi

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/example/processed/: example_processed.csv
data/processed/: 2khz_processed.csv  3khz_processed.csv  PHY3904_BaEP_2kHz_processed.csv  PHY3904_BaEP_3kHz_processed.csv  PHY3904_BaEP_preliminary_absolute_phase_values_processed.csv
data/raw/: PHY3904_BaEP_2kHz.csv  PHY3904_BaEP_3kHz.csv  PHY3904_BaEP_preliminary_absolute_phase_values.csv
data/theoretical/processed/: theoretical_processed.csv
src/: main.py
src/afi/: __init__.py  data.py  visualization.py
src/data/processed/: example_processed.csv
tex/: acknowledgments.tex  introduction.tex  main.aux  main.bbl  main.bib  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
