[project]
name = "phy3904-afi"
version = "0.1.0"
description = ""
authors = [
    {name = "h4lfw1t",email = "graysonofgotham2112@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
