[project]
name = "phy3904-afi"
version = "0.1.0"
description = ""
authors = [
    {name = "h4lfw1t",email = "graysonofgotham2112@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "pandas-stubs (>=3.0.0.260204,<4.0.0.0)",
    "scipy-stubs (>=1.17.1.2,<2.0.0.0)",
    "pyserial (>=3.5,<4.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
